corrigindo bug do z-index no input submit da busca

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -273,7 +273,7 @@ table {margin: .5em auto 1.5em auto; width: 98%;}
     margin-left: 5px;
     padding: 9px;
     position: absolute;
-    z-index: -1 !important;
+    z-index: -1;
     top: 0;
     right:0;
 }
